variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: not found: value caseOrange
while (2*nbBiscuits < caseOrange + 1)
                      ^